--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,41 @@
 body {
   margin: 0; }
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
+
+.container > div {
+  height: 300px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 100px;
+  line-height: 300px;
+  color: white; }
+
+.container > div:nth-of-type(1) {
+  background-color: red; }
+
+.container > div:nth-of-type(2) {
+  background-color: #cc0000; }
+
+.container > div:nth-of-type(3) {
+  background-color: #990000; }
+
+.container > div:nth-of-type(4) {
+  background-color: #660000; }
+
+.container > div:nth-of-type(5) {
+  background-color: #330000; }
+
+.container > div:nth-of-type(6) {
+  background-color: black; }
+
+@media (min-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr); } }
+
 /*# sourceMappingURL=main.css.map */
